@@ -305,7 +305,7 @@
 (CL:DEFUN ARGUMENT-KEYWORD? (X) (CL:BLOCK ARGUMENT-KEYWORD? (CL:BLOCK NIL (CL:LABELS ((~G1041 (~G3) (CL:COND (~G3 ~G3) (T (CL:LABELS ((~G1042 (~G4) (CL:COND (~G4 ~G4) (T (CL:LABELS ((~G1043 (~G5) (CL:COND (~G5 ~G5) (T (EQ X 'CL:&KEY))))) (~G1043 (EQ X 'CL:&OPTIONAL))))))) (~G1042 (EQ X 'CL:&BODY))))))) (~G1041 (EQ X 'CL:&REST))))))
 (CL:DEFUN ARGDEF-GET-VALUE (DEFS VALS) (CL:BLOCK ARGDEF-GET-VALUE (CL:BLOCK NIL (CL:COND ((CONS? VALS) (CL:CAR VALS)) ((CONS? (CL:CAR DEFS)) (CADR (CL:CAR DEFS))) (T (CL:CAR DEFS))))))
 (CL:DEFUN $ (CL:&REST ARGS) (CL:BLOCK $ (CL:BLOCK NIL (MAKE-SYMBOL (CL:APPLY (CL:FUNCTION +) (DYNAMIC-MAP (CL:FUNCTION STRING) ARGS))))))
-(CL:DEFUN TYPE? (O X) (CL:BLOCK TYPE? (CL:BLOCK NIL (CL:COND (X (CL:PROGN (CL:COND ((CONS? X) (CL:LABELS ((~G1044 (~G341) (CL:COND ((EQL ~G341 'AND) (EVERY (CL:LAMBDA (_) (CL:BLOCK NIL (TYPE? O _))) (CL:CDR X))) ((EQL ~G341 'OR) (SOME (CL:LAMBDA (_) (CL:BLOCK NIL (TYPE? O _))) (CL:CDR X))) ((EQL ~G341 'SATISFIES) (FUNCALL (SYMBOL-FUNCTION (CL:CAR (CL:CDR X))) O)) (T (CL:LABELS ((~G1045 (!) (CL:COND (! (CL:APPLY ! (CL:CDR X))) (T (ERROR "Unknown type specifier symbol ~A." (CL:CAR X)))))) (~G1045 (ASSOC-VALUE (CL:CAR X) *TYPES*))))))) (~G1044 (CL:CAR X)))) (T (CL:LABELS ((~G1046 (~G342) (CL:COND (T (TYPE? O (FUNCALL (ASSOC-VALUE X *TYPES*))))))) (~G1046 X))))))))))
+(CL:DEFUN TYPE? (O X) (CL:BLOCK TYPE? (CL:BLOCK NIL (CL:COND (X (CL:PROGN (CL:COND ((CONS? X) (CL:LABELS ((~G1044 (~G341) (CL:COND ((EQL ~G341 'AND) (EVERY (CL:LAMBDA (_) (CL:BLOCK NIL (TYPE? O _))) (CL:CDR X))) ((EQL ~G341 'OR) (SOME (CL:LAMBDA (_) (CL:BLOCK NIL (TYPE? O _))) (CL:CDR X))) ((EQL ~G341 'SATISFIES) (FUNCALL (SYMBOL-FUNCTION (CL:CAR (CL:CDR X))) O)) (T (CL:LABELS ((~G1045 (!) (CL:COND (! (CL:APPLY ! (CL:CDR X))) (T (ERROR "Unknown type specifier symbol ~A." (CL:CAR X)))))) (~G1045 (ASSOC-VALUE (CL:CAR X) *TYPES*))))))) (~G1044 (CL:CAR X)))) (T (CL:COND ((STRING? X) (EQUAL O X)) (T (TYPE? O (FUNCALL (CL:LABELS ((~G1046 (~G342) (CL:COND (~G342 ~G342) (T (ERROR "No typespecifier for ~A." X))))) (~G1046 (ASSOC-VALUE X *TYPES*)))))))))))))))
 (CL:DEFUN ARGDEF-GET-TYPE (X) (CL:BLOCK ARGDEF-GET-TYPE (CL:BLOCK NIL (CL:COND ((CONS? X) (CL:COND ((ARGUMENT-TYPE-SPECIFIER? (CL:CAR (CL:CDR X))) (CL:CAR (CL:CDR X)))))))))
 (CL:DEFUN ARGDEF-GET-NAME (X) (CL:BLOCK ARGDEF-GET-NAME (CL:BLOCK NIL (CL:COND ((CONS? X) (CL:CAR X)) (T X)))))
 (CL:DEFUN MAKE-&KEY-ALIST (DEF) (CL:BLOCK MAKE-&KEY-ALIST (CL:BLOCK NIL (CL:LABELS ((~G1047 (KEYS) (CL:LABELS ((MAKE-&KEY-DESCR (_) (CL:BLOCK NIL (CL:COND (_ (CL:PROGN (CL:COND ((ARGUMENT-KEYWORD? (CL:CAR _)) (COPY-DEF-UNTIL-&KEY _)) (T (CL:LABELS ((~G1048 (!) (CL:PROGN (CL:SETQ KEYS (CL:CONS (CL:COND ((CONS? !) (CL:CONS (CL:CAR !) (ARGDEF-GET-DEFAULT !))) (T (CL:CONS ! !))) KEYS))) (MAKE-&KEY-DESCR (CL:CDR _)))) (~G1048 (CL:CAR _)))))))))) (COPY-DEF-UNTIL-&KEY (_) (CL:BLOCK NIL (CL:COND (_ (CL:PROGN (CL:COND ((EQ 'CL:&KEY (CL:CAR _)) (MAKE-&KEY-DESCR (CL:CDR _))) (T (CL:CONS (CL:CAR _) (COPY-DEF-UNTIL-&KEY (CL:CDR _))))))))))) (VALUES (COPY-DEF-UNTIL-&KEY DEF) (REVERSE KEYS))))) (~G1047 NIL)))))
@@ -394,7 +394,7 @@
 (CL:DEFUN BUTLAST (PLIST) (CL:BLOCK BUTLAST (CL:BLOCK NIL (CL:COND ((CL:CDR PLIST) (CL:CONS (CL:CAR PLIST) (BUTLAST (CL:CDR PLIST))))))))
 (CL:DEFUN LAST (X) (CL:BLOCK LAST (CL:BLOCK NIL (CL:COND ((CL:CDR X) (LAST (CL:CDR X))) (T X)))))
 (CL:DEFUN GROUP (X SIZE) (CL:BLOCK GROUP (CL:BLOCK NIL (CL:LABELS ((~G1173 (Q) (CL:BLOCK NIL (CL:PROGN (CL:TAGBODY ~G36 (CL:COND ((NOT X) (CL:RETURN-FROM NIL (CL:PROGN (QUEUE-LIST Q))))) (ENQUEUE Q (LIST-SUBSEQ X 0 SIZE)) (CL:PROGN (CL:SETQ X (NTHCDR SIZE X))) (CL:GO ~G36)))))) (~G1173 (MAKE-QUEUE))))))
-(CL:DEFUN MAKE-? (BODY) (CL:BLOCK MAKE-? (CL:BLOCK NIL (CL:LABELS ((~G1174 (TESTS) (CL:LABELS ((~G1175 (END) (CL:LABELS ((~G1176 (~G723) (CL:COND (~G723 ~G723) (T (ERROR "Body is missing."))))) (~G1176 BODY)) (CL:CONS 'CL:COND (CL:LABELS ((~G1177 (~G1602) (APPEND (CL:COND ((JSON-OBJECT? ~G1602) (PROPS-KLIST ~G1602)) (T ~G1602)) NIL))) (~G1177 (CL:COND ((CL:CDR END) TESTS) (T (+ (BUTLAST TESTS) (LIST (CL:CONS T END)))))))))) (~G1175 (CL:CAR (LAST TESTS)))))) (~G1174 (GROUP BODY 2))))))
+(CL:DEFUN MAKE-? (BODY) (CL:BLOCK MAKE-? (CL:BLOCK NIL (CL:LABELS ((~G1174 (TESTS) (CL:LABELS ((~G1175 (END) (CL:LABELS ((~G1176 (~G723) (CL:COND (~G723 ~G723) (T (ERROR "Body is missing."))))) (~G1176 BODY)) (CL:CONS 'CL:COND (CL:LABELS ((~G1177 (~G1603) (APPEND (CL:COND ((JSON-OBJECT? ~G1603) (PROPS-KLIST ~G1603)) (T ~G1603)) NIL))) (~G1177 (CL:COND ((CL:CDR END) TESTS) (T (+ (BUTLAST TESTS) (LIST (CL:CONS T END)))))))))) (~G1175 (CL:CAR (LAST TESTS)))))) (~G1174 (GROUP BODY 2))))))
 (CL:DEFUN ARGUMENT-EXPAND-NAMES (FUN DEF) (CL:BLOCK ARGUMENT-EXPAND-NAMES (CL:BLOCK NIL (ARGUMENT-EXPAND FUN DEF NIL :APPLY-VALUES? NIL))))
 (CL:DEFUN ENSURE-LIST (X) (CL:BLOCK ENSURE-LIST (CL:BLOCK NIL (CL:COND (X (CL:COND ((LIST? X) X) (T (LIST X))))))))
 (CL:DEFUN %MACROEXPAND (X) (CL:COND ((ATOM X) X) ((CL:APPLY *MACRO?* (LIST X)) (CL:LABELS ((~G1178 (X) (CL:COND ((CONS? X) (CL:CONS (CL:CAR X) (%MACROEXPAND-REST (CL:CDR X)))) (T X)))) (~G1178 (CL:APPLY *MACROCALL* (LIST X))))) ((EQ (CL:CAR X) 'CL:QUOTE) X) ((EQ (CL:CAR X) 'BACKQUOTE) (CL:CONS 'BACKQUOTE (CL:APPLY *MACROEXPAND-BACKQUOTE* (LIST (CL:CDR X))))) ((EQ (CL:CAR X) 'QUASIQUOTE) (CL:CONS 'QUASIQUOTE (%MACROEXPAND (CL:CDR X)))) ((EQ (CL:CAR X) 'QUASIQUOTE-SPLICE) (CL:CONS 'QUASIQUOTE-SPLICE (%MACROEXPAND (CL:CDR X)))) (T (CL:CONS (%MACROEXPAND (CL:CAR X)) (%MACROEXPAND-REST (CL:CDR X))))))
